# adjust-home-task

./: README.md  asgi.py  pyproject.toml  settings.py  wsgi.py
adjust/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
adjust/management/commands/: import_data.py
adjust/migrations/: 0001_initial.py
